now you can click on the toolbar to close the sidebar

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -20,7 +20,7 @@
 			<material-sidenav layout="vertical" class="material-sidenav-left material-whiteframe-z3" component-id="left">
 
 				<material-toolbar class="material-theme-indigo">
-					<h1 class="material-toolbar-tools">TeamPot</h1>
+					<h1 class="material-toolbar-tools" data-ng-click="closeSidebar()">TeamPot</h1>
 				</material-toolbar>
 				<material-content flex>
 
