FAB button position

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -78,38 +78,38 @@
 					</h1>
 				</material-toolbar>
 
+				<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red">
+				           <material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
+			        </material-button>
+
 				
 
 				<material-content flex class="material-content-padding" id="view-container">
 
-					<material-button class="material-button-fab material-theme-red" id="fab-button">
-				           <material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
-			        </material-button>
+					<material-tabs class="material-theme-transparent">
+						<material-tab label="MyTab">
+							<div layout layout-align="center center">
+								<material-whiteframe class="material-whiteframe-z1" flex>
+									rgrtgert
+								</material-whiteframe>
+							</div>
+						</material-tab>
+						<material-tab label="MyTa3b">
+							<div layout layout-align="center center">
+								<material-whiteframe class="material-whiteframe-z1" flex>
+									rgrtgert2
+								</material-whiteframe>
+							</div>
+						</material-tab>
+						<material-tab label="MyTab2">
+							<div layout layout-align="center center" flex>
+								<material-whiteframe class="material-whiteframe-z1" flex>
+									rgrtgert3
+								</material-whiteframe>
+							</div>
+						</material-tab>
 
-			        <material-tabs class="material-theme-transparent">
-        <material-tab label="MyTab">
-          <div layout layout-align="center center">
-          	<material-whiteframe class="material-whiteframe-z1" flex>
-            rgrtgert
-            </material-whiteframe>
-          </div>
-        </material-tab>
-        <material-tab label="MyTa3b">
-          <div layout layout-align="center center">
-          <material-whiteframe class="material-whiteframe-z1" flex>
-            rgrtgert2
-            </material-whiteframe>
-          </div>
-        </material-tab>
-        <material-tab label="MyTab2">
-          <div layout layout-align="center center" flex>
-          <material-whiteframe class="material-whiteframe-z1" flex>
-            rgrtgert3
-            </material-whiteframe>
-          </div>
-        </material-tab>
-
-    </material-tabs>
+					</material-tabs>
 
 					<material-whiteframe class="material-whiteframe-z1" layout layout-align="center center">
 						<span>Hello World Quantum Paper!</span>
