--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -63,6 +63,10 @@
 			</material-sidenav>
 	
 			<material-content class="full-height" style="overflow:hidden" flex>
+			
+				<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red">
+					<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
+				</material-button>
 	
 				<div layout="vertical" layout-fill>
 		
