--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -33,9 +33,7 @@
 	
 			<material-content class="full-height" style="overflow:hidden" flex>
 			
-				<material-button class="material-button-fab material-button-fab-bottom-right material-theme-red" ng-click="fabAction($event)">
-					<material-icon icon="/img/icons/ic_add_24px.svg"></material-icon>
-				</material-button>
+				<span ng-include="fabTemplateUrl" ng-if="fabTemplateUrl"></span>
 	
 				<div layout="vertical" layout-fill>
 		
