--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -77,6 +77,8 @@
 		<script type="text/javascript" src="/libs/angular/angular.js"></script>
 		<script type="text/javascript" src="/libs/angular-animate/angular-animate.js"></script>
 		<script type="text/javascript" src="/libs/angular-route/angular-route.js"></script>
+		<script type="text/javascript" src="/libs/angular-aria/angular-aria.js"></script>
+		<script type="text/javascript" src="/libs/hammerjs/hammer.js"></script>
 		<script type="text/javascript" src="/libs/angular-material/angular-material.js"></script>
 		
 		<!-- endbuild -->
