--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -88,6 +88,8 @@
 		<script type="text/javascript" src="/components/route-breadcrumbs.js"></script>
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		<script type="text/javascript" src="/components/project/list.js"></script>
+		<script type="text/javascript" src="/components/project/list-fab.js"></script>
+		<script type="text/javascript" src="/components/project/edit-modal.js"></script>
 		<script type="text/javascript" src="/components/project/view.js"></script>
 		<!-- endbuild -->
 	
