UI for new project

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -86,6 +86,7 @@
 		<!-- build:js app.min.js -->
 		<script type="text/javascript" src="/app.js"></script>
 		<script type="text/javascript" src="/components/route-breadcrumbs.js"></script>
+		<script type="text/javascript" src="/components/tf-float.js"></script>
 		<script type="text/javascript" src="/components/project/ProjectService.js"></script>
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		<script type="text/javascript" src="/components/project/list.js"></script>
