fist task list implementation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -85,16 +85,23 @@
 	
 		<!-- build:js app.min.js -->
 		<script type="text/javascript" src="/app.js"></script>
+		
 		<script type="text/javascript" src="/components/route-breadcrumbs.js"></script>
 		<script type="text/javascript" src="/components/route-active.js"></script>
 		<script type="text/javascript" src="/components/angular-gapi-client/angular-gapi-client.js"></script>
 		<script type="text/javascript" src="/components/tf-float.js"></script>
-		<script type="text/javascript" src="/components/project/ProjectService.js"></script>
+		
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
+		
+		<script type="text/javascript" src="/components/project/ProjectService.js"></script>
 		<script type="text/javascript" src="/components/project/list.js"></script>
 		<script type="text/javascript" src="/components/project/list-fab.js"></script>
 		<script type="text/javascript" src="/components/project/edit-modal.js"></script>
 		<script type="text/javascript" src="/components/project/view.js"></script>
+		
+		<script type="text/javascript" src="/components/task/TaskService.js"></script>
+		<script type="text/javascript" src="/components/task/list.js"></script>
+		<script type="text/javascript" src="/components/task/list-fab.js"></script>
 		<!-- endbuild -->
 	
 	</body>
