task list with completed grouping

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -80,7 +80,7 @@
 		<script type="text/javascript" src="/libs/angular-aria/angular-aria.js"></script>
 		<script type="text/javascript" src="/libs/hammerjs/hammer.js"></script>
 		<script type="text/javascript" src="/libs/angular-material/angular-material.js"></script>
-		
+		<script type="text/javascript" src="/libs/lodash/dist/lodash.js"></script>
 		<!-- endbuild -->
 	
 		<!-- build:js app.min.js -->
@@ -90,6 +90,9 @@
 		<script type="text/javascript" src="/components/route-active.js"></script>
 		<script type="text/javascript" src="/components/angular-gapi-client/angular-gapi-client.js"></script>
 		<script type="text/javascript" src="/components/tf-float.js"></script>
+		<script type="text/javascript" src="/components/angular-groupby.js"></script>
+		<script type="text/javascript" src="/libs/angular-filter/dist/angular-filter.js"></script>
+		
 		
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		
