--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -22,7 +22,7 @@
 	
 		<section layout="horizontal" class="full-height" flex>
 	
-			<material-sidenav layout="vertical" class="material-sidenav-left material-whiteframe-z3" component-id="left"> 
+			<material-sidenav layout="vertical" class="material-sidenav-left material-whiteframe-z3" component-id="left" material-swipe-left="closeSidebar()"> 
 				<material-toolbar class="material-theme-indigo">
 					<h1 class="material-toolbar-tools" data-ng-click="closeSidebar()">TeamPot</h1>
 				</material-toolbar> 
@@ -80,7 +80,6 @@
 		<script type="text/javascript" src="/libs/angular-aria/angular-aria.js"></script>
 		<script type="text/javascript" src="/libs/hammerjs/hammer.js"></script>
 		<script type="text/javascript" src="/libs/angular-material/angular-material.js"></script>
-		<script type="text/javascript" src="/libs/lodash/dist/lodash.js"></script>
 		<!-- endbuild -->
 	
 		<!-- build:js app.min.js -->
@@ -90,9 +89,7 @@
 		<script type="text/javascript" src="/components/route-active.js"></script>
 		<script type="text/javascript" src="/components/angular-gapi-client/angular-gapi-client.js"></script>
 		<script type="text/javascript" src="/components/tf-float.js"></script>
-		<script type="text/javascript" src="/components/angular-groupby.js"></script>
 		<script type="text/javascript" src="/libs/angular-filter/dist/angular-filter.js"></script>
-		
 		
 		<script type="text/javascript" src="/components/dashboard/dashboard.js"></script>
 		
