task add boilerplate

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,8 @@
 		<link type="text/css" rel="stylesheet" href="/common.css" />
 		<link type="text/css" rel="stylesheet" href="/app.css" />
 		<link type="text/css" rel="stylesheet" href="/material-theme-transparent.css" />
+		
+		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<!-- endbuild -->
 	
 	</head>
@@ -102,6 +104,7 @@
 		<script type="text/javascript" src="/components/task/TaskService.js"></script>
 		<script type="text/javascript" src="/components/task/list.js"></script>
 		<script type="text/javascript" src="/components/task/list-fab.js"></script>
+		<script type="text/javascript" src="/components/task/edit.js"></script>
 		<!-- endbuild -->
 	
 	</body>
