changed circular spinner bg

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,7 +12,7 @@
 		<!-- build:css app.min.css -->
 		<link type="text/css" rel="stylesheet" href="/common.css" />
 		<link type="text/css" rel="stylesheet" href="/app.css" />
-		<link type="text/css" rel="stylesheet" href="/material-theme-transparent.css" />
+		<link type="text/css" rel="stylesheet" href="/material-theme-mods.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
 		<!-- endbuild -->
