--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,6 +15,7 @@
 		<link type="text/css" rel="stylesheet" href="/material-theme-mods.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
+		<link type="text/css" rel="stylesheet" href="/components/file/list.css" />
 		<!-- endbuild -->
 	
 	</head>
@@ -78,6 +79,7 @@
 		<script type="text/javascript" src="/libs/angular-animate/angular-animate.js"></script>
 		<script type="text/javascript" src="/libs/angular-route/angular-route.js"></script>
 		<script type="text/javascript" src="/libs/angular-aria/angular-aria.js"></script>
+		<script type="text/javascript" src="/libs/angular-sanitize/angular-sanitize.js"></script>
 		<script type="text/javascript" src="/libs/hammerjs/hammer.js"></script>
 		<script type="text/javascript" src="/libs/angular-material/angular-material.js"></script>
 		<script type="text/javascript" src="/libs/angular-filter/dist/angular-filter.js"></script>
@@ -89,6 +91,7 @@
 		
 		<script type="text/javascript" src="/components/route-breadcrumbs.js"></script>
 		<script type="text/javascript" src="/components/route-active.js"></script>
+		<script type="text/javascript" src="/components/iframe-onload.js"></script>
 		<script type="text/javascript" src="/components/angular-gapi-client/angular-gapi-client.js"></script>
 		<script type="text/javascript" src="/components/tf-float.js"></script>
 		
@@ -104,6 +107,9 @@
 		<script type="text/javascript" src="/components/task/list.js"></script>
 		<script type="text/javascript" src="/components/task/list-fab.js"></script>
 		<script type="text/javascript" src="/components/task/edit.js"></script>
+		
+		<script type="text/javascript" src="/components/file/list.js"></script>
+		<script type="text/javascript" src="/components/file/list-fab.js"></script>
 		<!-- endbuild -->
 	
 	</body>
