--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -15,7 +15,6 @@
 		<link type="text/css" rel="stylesheet" href="/material-theme-mods.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
-		<link type="text/css" rel="stylesheet" href="/components/file/list.css" />
 		<!-- endbuild -->
 	
 	</head>
@@ -87,6 +86,7 @@
 	
 		<!-- build:js app.min.js -->
 		<script type="text/javascript" src="/app.js"></script>
+		<script type="text/javascript" src="/app-constants.js"></script>
 		
 		<script type="text/javascript" src="/components/route-breadcrumbs.js"></script>
 		<script type="text/javascript" src="/components/route-active.js"></script>
@@ -111,6 +111,8 @@
 		
 		<script type="text/javascript" src="/components/file/list.js"></script>
 		<script type="text/javascript" src="/components/file/list-fab.js"></script>
+		
+		<script type="text/javascript" src="/components/discussion/discussions.js"></script>
 		<!-- endbuild -->
 	
 	</body>
