first activity implementation

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -120,6 +120,7 @@
 		<script type="text/javascript" src="/components/project/list-fab.js"></script>
 		<script type="text/javascript" src="/components/project/edit-modal.js"></script>
 		
+		<script type="text/javascript" src="/components/activity/ActivityService.js"></script>
 		<script type="text/javascript" src="/components/activity/list.js"></script>
 		
 		<script type="text/javascript" src="/components/task/TaskService.js"></script>
