--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -135,6 +135,9 @@
 		<script type="text/javascript" src="/components/file/list.js"></script>
 		<script type="text/javascript" src="/components/file/list-fab.js"></script>
 		
+		<script type="text/javascript" src="/components/user/UserService.js"></script>
+		<script type="text/javascript" src="/components/user/list.js"></script>
+		
 		<script type="text/javascript" src="/components/discussion/discussions.js"></script>
 		<!-- endbuild -->
 	
