--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -137,6 +137,8 @@
 		
 		<script type="text/javascript" src="/components/user/UserService.js"></script>
 		<script type="text/javascript" src="/components/user/list.js"></script>
+		<script type="text/javascript" src="/components/user/list-fab.js"></script>
+		<script type="text/javascript" src="/components/user/add-modal.js"></script>
 		
 		<script type="text/javascript" src="/components/discussion/discussions.js"></script>
 		<!-- endbuild -->
