--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
 							<material-icon icon="/img/icons/ic_arrow_back_24px.svg"></material-icon>
 							<material-tooltip>Back to projects</material-tooltip>
 						</material-button>
-						{{currentProject.name}}
+						<b>{{currentProject.name}}</b>
 					</h1>
 				</material-toolbar> 
 				<material-content flex>
@@ -57,6 +57,8 @@
 							<a hide-md ng-click="openSidebar()" aria-label="Toggle Menu" href ng-if="sidebarTemplateUrl"> 
 								<material-icon icon="/img/icons/ic_menu_24px.svg"></material-icon>
 							</a>
+							
+							<span ng-if="!sidebarTemplateUrl"><b>TeamPot</b></span>
 		
 							<ol class="route-breadcrumbs" flex>
 								<li class="route-breadcrumb" ng-repeat="breadcrumb in breadcrumbs">
