meeting list polish

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,7 @@
 		<link type="text/css" rel="stylesheet" href="/material-theme-mods.css" />
 		
 		<link type="text/css" rel="stylesheet" href="/components/task/list.css" />
+		<link type="text/css" rel="stylesheet" href="/components/meeting/list.css" />
 		<!-- endbuild -->
 	
 	</head>
